Features/NetworkPolicy/allow-from-alice.yaml
# policy specifies “all pods in namespace ‘project-a’ allow traffic from any pod in the same namespace or pod 
# whose namespace is labeled with ‘user: alice’.”
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-alice
spec:
  podSelector: 
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            user: alice
    - from:
      - podSelector: { }
