Features/NetworkPolicy/allow-from-red-ns-a.yaml
# policy specifies “all pods in namespace ‘project-a’ allow traffic from red pods in the same namespace.”
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-from-red-ns-a
spec:
  podSelector: 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: red-openshift
