Features/NetworkPolicy/allow-from-same-namespace.yaml
# The allow-from-same-namespace policy specifies “all pods in namespace ‘project-a’ 
# allow traffic from any other pods in the same namespace.”
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
    name: allow-from-same-namespace
spec:
    podSelector: null
    ingress:
    - from:
      - podSelector: { }
