Features/NetworkPolicy/allow-http-and-https-ns-a.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
    name: allow-from-same-namespace
spec:
    podSelector: null
    ingress:
    - ports:
       - protocol: TCP
         port: 80
       - protocol: TCP
         port: 443
    - from:
      - podSelector: { }
