Features/NetworkPolicy/allow-podSelector-and-namespaceSelector.yaml
# policy specifies “the only traffic allowed is from any red pod in namespace labeled with
# user:alice to the pod labeled with name: blue-openshift

kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
    name: allow-podSelector-and-namespaceSelector
spec:
    podSelector: 
      matchLabels:
        name: blue-openshift
    ingress:
    - from:
      - namespaceSelector:     # chooses all pods in namespaces labelled with user=alice
          matchLabels:
            user: alice
      - podSelector:
          matchLabels:
            name: red-openshift  # chooses pods with name=red-openshift
