Features/NetworkPolicy/allow-podSelector-and-namespaceSelector2.yaml
# policy specifies “the only traffic allowed is from any red pod in namespace labeled with
# user:alice to the pod labeled with name: red-openshift

kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
    name: allow-podselector-and-namespaceselector
spec:
    podSelector: 
      matchLabels:
        name: red-openshift
    ingress:
      - from:
        - namespaceSelector:     
            matchLabels:
              user: alice
        - podSelector:
            matchLabels:
              name: red-openshift
