Features/NetworkPolicy/allow-to-red-ns-a.yaml
# The allow-to-red-ns-a policy specifies “all red pods in namespace ‘project-a’ allow 
# traffic from all other pods in the same namespace.”
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-to-red-ns-a
spec:
  podSelector: 
    matchLabels:
      name: red-openshift
  ingress:
    - from:
      - podSelector: { }
