Features/NetworkPolicy/allow-to-red.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
    name: allow-to-red
spec:
    podSelector: 
      matchLabels:
           red-openshift
    ingress:
    - { }
