Features/NetworkPolicy/default-deny.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata: 
  name: default-deny
spec: 
  podSelector:
