Features/NetworkPolicy/ingress-ipblock.yaml
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata: 
  name: default-deny
spec: 
  ingress:
    - from:
      - ipBlock:
          cidr: 10.128.2.0/24
          except:
          - 10.128.2.7/32
    podSelector: {}
    policyTypes:
    - Ingress
