Features/NetworkPolicy/ingress-ipblock2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: default-deny
spec: 
  ingress:
    - from:
      - ipBlock:
          cidr: 10.128.2.0/24
          except:
          - 10.128.2.7/32
      podSelector: {}
